--- a/project_1/life.html
+++ b/project_1/life.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>My name is sajjad</p>
-    <p>if you want know about me</p>
+    <p>if you want</p>
     <button>Click here</button>
 </body>
 </html>
